Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 2.0
-
None
-
None
-
CDH 5.2.0, CentOS
Description
Memory usage grows rapidly while scanning a large table (multi TB) using upper() or lower() function on a string column, and the query terminates with "Memory Limit Exceeded" error.
Memory leak happens when executing:
select * from table_name where lower(column_name) = "condition";
select * from table_name where upper(column_name) = "CONDITION";
Even worse if I put more similar conditions in a single query.
However, queries like these are fine:
select * from table_name where column_name = "condition";
select * from table_name where column_name like "%condition%";
Not sure whether other functions have the same problem.