IMPALA-1397: free local expr allocations in scanner threads

Change-Id: If42ab1258a7750fa506089751e3bb3cbd3e99911
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/4939
Reviewed-by: Nong Li <nong@cloudera.com>
Tested-by: jenkins
(cherry picked from commit d6d6b33653080ebc29c41b7b041e9e467613c36f)
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/4998
Reviewed-by: Skye Wanderman-Milne <skye@cloudera.com>